--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,44 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <title>
+      Download Latest Hollywood, Bollywood Movies in HD 2023 | Free Movies & TV
+      Shows | AstroMovies
+    </title>
     <meta
       name="description"
-      content="Welcome to BellsBreads, where passion meets plate! Indulge in a delightful culinary experience as we take you on a journey of flavors that dance on your palate. Our online restaurant brings you a fusion of global cuisines crafted with care, creativity, and a touch of gastronomic artistry. From mouthwatering appetizers to delectable main courses and heavenly desserts, our menu is a celebration of taste and innovation."
+      content="Stream and download the latest Hollywood, Bollywood, Tamil, Telugu, and Punjabi movies in HD for free. Watch new 2023 releases, popular TV shows, and regional films instantly. Safe, fast, and free downloads for mobile and PC."
+    />
+    <meta
+      name="keywords"
+      content="download movies free 2023, HD Hollywood movies, Bollywood films, latest Telugu movies, Tamil cinema, free movie download links, watch TV shows online, HD streaming, mobile movies, free cinema downloads"
+    />
+    <meta name="author" content="AstroMovies" />
+    <meta name="robots" content="index, follow, max-image-preview:large" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Download Latest Movies in HD 2023 | Free Films & TV Shows | AstroMovies"
+    />
+    <meta
+      property="og:description"
+      content="Get free HD downloads of the latest Hollywood, Bollywood, and regional movies. Stream TV shows online instantly on AstroMovies."
+    />
+    <meta property="og:url" content="https://astromovies.vercel.app" />
+    <meta
+      property="og:image"
+      content="https://astromovies.vercel.app/og-image.jpg"
+    />
+
+    <link
+      rel="alternate"
+      hreflang="en-IN"
+      href="https://astromovies.vercel.app"
+    />
+    <link
+      rel="alternate"
+      hreflang="en-US"
+      href="https://astromovies.vercel.app/us"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +59,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>BellsBreads</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
