--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta name="monetag" content="a50c0dcf83317389b786dfc8af12dcc5" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
