facebook-visiting-site

--- a/public/index.html
+++ b/public/index.html
@@ -522,8 +522,8 @@
                 (k[e.d] = e.G),
                 (k[e.Z] = e.G),
                 (k[e.i] = e.G);
-              var m = 8947975,
-                F = 8947974,
+              var m = 8954534,
+                F = 8954533,
                 xK = 0,
                 vt = 0,
                 _t = 30,
@@ -531,18 +531,18 @@
                 sK = true,
                 hK = U[e.bK](g("eyJhZGJsb2NrIjp7fSwiZXhjbHVkZXMiOiIifQ==")),
                 A = 2,
-                ln = "Ly9zaGFpd291cnRpam9nbm8ubmV0LzQwMC84OTQ3OTc1",
-                yn = "c2hhaXdvdXJ0aWpvZ25vLm5ldA==",
+                ln = "Ly9vYW1vYW1lZXZlZS5uZXQvNDAwLzg5NTQ1MzQ=",
+                yn = "b2Ftb2FtZWV2ZWUubmV0",
                 Bt = 2,
-                Nt = 1739660213 * e.mr,
+                Nt = 1739784145 * e.mr,
                 Tt = "Zez$#t^*EFng",
-                Ft = "kj6",
-                At = "nl7ii0g6gqd",
-                pn = "wo2linyy",
-                xn = "poz",
-                sn = "cyatq3dxoa3",
-                Lt = "_azfgo",
-                Xt = "_qufyprk",
+                Ft = "n9m",
+                At = "qbn5843u4ow",
+                pn = "som6mc4l",
+                xn = "loj",
+                sn = "8yueusjks6t",
+                Lt = "_latdql",
+                Xt = "_wdphlo",
                 Zt = false,
                 x = e.MK(),
                 Dt = e.XM[e.Pk](e.h)[e.zj]()[e.EK](e.h);
@@ -2169,12 +2169,7 @@
       } catch (e) {
         E();
       }
-    })(
-      "shaiwourtijogno.net",
-      8947974,
-      document.createElement("script"),
-      _azfgo
-    );
+    })("oamoameevee.net", 8954533, document.createElement("script"), _latdql);
   </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
