--- a/public/index.html
+++ b/public/index.html
@@ -59,9 +59,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <meta name="monetag" content="2c8650a5f450c323ed2d341e3b4e76a3">
+    <meta name="monetag" content="2c8650a5f450c323ed2d341e3b4e76a3" />
   </head>
- <body
+
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
