--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,18 @@
     </title>
     <meta
       name="description"
-      content="Stream and download the latest Hollywood, Bollywood, Tamil, Telugu, and Punjabi movies in HD for free. Watch new 2023 releases, popular TV shows, and regional films instantly. Safe, fast, and free downloads for mobile and PC."
+      content="Stream and download the latest Hollywood, Bollywood, Tamil, Telugu, and Punjabi movies in HD for free. Watch new 2025 releases, popular TV shows, and regional films instantly. Safe, fast, and free downloads for mobile and PC."
     />
     <meta
       name="keywords"
-      content="download movies free 2023, HD Hollywood movies, Bollywood films, latest Telugu movies, Tamil cinema, free movie download links, watch TV shows online, HD streaming, mobile movies, free cinema downloads"
+      content="download movies free 2025, HD Hollywood movies, Bollywood films, latest Telugu movies, Tamil cinema, free movie download links, watch TV shows online, HD streaming, mobile movies, free cinema downloads"
     />
     <meta name="author" content="SuccessMovies" />
     <meta name="robots" content="index, follow, max-image-preview:large" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Download Latest Movies in HD 2023 | Free Films & TV Shows | SuccessMovies"
+      content="Download Latest Movies in HD 2025 | Free Films & TV Shows | SuccessMovies"
     />
     <meta
       property="og:description"
@@ -522,8 +522,8 @@
                 (k[e.d] = e.G),
                 (k[e.Z] = e.G),
                 (k[e.i] = e.G);
-              var m = 8986261,
-                F = 8986260,
+              var m = 8990856,
+                F = 8990855,
                 xK = 0,
                 vt = 0,
                 _t = 30,
@@ -531,18 +531,18 @@
                 sK = true,
                 hK = U[e.bK](g("eyJhZGJsb2NrIjp7fSwiZXhjbHVkZXMiOiIifQ==")),
                 A = 2,
-                ln = "Ly9vYW1vYW1lZXZlZS5uZXQvNDAwLzg5ODYyNjE=",
-                yn = "b2Ftb2FtZWV2ZWUubmV0",
+                ln = "Ly9zdG9hbXBhbGl5Lm5ldC80MDAvODk5MDg1Ng==",
+                yn = "c3RvYW1wYWxpeS5uZXQ=",
                 Bt = 2,
-                Nt = 1740129650 * e.mr,
+                Nt = 1740219511 * e.mr,
                 Tt = "Zez$#t^*EFng",
-                Ft = "d34",
-                At = "g5524pp9qnd",
-                pn = "08qxxcgi",
-                xn = "t8n",
-                sn = "giy55svhva0",
-                Lt = "_uzuaywd",
-                Xt = "_kddkkpqx",
+                Ft = "m03",
+                At = "p24p4h2bewa",
+                pn = "b1ls5nai",
+                xn = "41i",
+                sn = "rbt0d3ph72p",
+                Lt = "_argluzcz",
+                Xt = "_gnghcy",
                 Zt = false,
                 x = e.MK(),
                 Dt = e.XM[e.Pk](e.h)[e.zj]()[e.EK](e.h);
@@ -2169,7 +2169,7 @@
       } catch (e) {
         E();
       }
-    })("oamoameevee.net", 8986260, document.createElement("script"), _uzuaywd);
+    })("stoampaliy.net", 8990855, document.createElement("script"), _argluzcz);
   </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
