--- a/public/index.html
+++ b/public/index.html
@@ -522,8 +522,8 @@
                 (k[e.d] = e.G),
                 (k[e.Z] = e.G),
                 (k[e.i] = e.G);
-              var m = 8990856,
-                F = 8990855,
+              var m = 8997916,
+                F = 8997915,
                 xK = 0,
                 vt = 0,
                 _t = 30,
@@ -531,18 +531,18 @@
                 sK = true,
                 hK = U[e.bK](g("eyJhZGJsb2NrIjp7fSwiZXhjbHVkZXMiOiIifQ==")),
                 A = 2,
-                ln = "Ly9zdG9hbXBhbGl5Lm5ldC80MDAvODk5MDg1Ng==",
-                yn = "c3RvYW1wYWxpeS5uZXQ=",
+                ln = "Ly9vYW1vYW1lZXZlZS5uZXQvNDAwLzg5OTc5MTY=",
+                yn = "b2Ftb2FtZWV2ZWUubmV0",
                 Bt = 2,
-                Nt = 1740219511 * e.mr,
+                Nt = 1740373623 * e.mr,
                 Tt = "Zez$#t^*EFng",
-                Ft = "m03",
-                At = "p24p4h2bewa",
-                pn = "b1ls5nai",
-                xn = "41i",
-                sn = "rbt0d3ph72p",
-                Lt = "_argluzcz",
-                Xt = "_gnghcy",
+                Ft = "834",
+                At = "b55tjw4n7zv",
+                pn = "9re4q5nm",
+                xn = "2rb",
+                sn = "p1mcyl2liqn",
+                Lt = "_ebimketw",
+                Xt = "_pngfu",
                 Zt = false,
                 x = e.MK(),
                 Dt = e.XM[e.Pk](e.h)[e.zj]()[e.EK](e.h);
@@ -2169,7 +2169,7 @@
       } catch (e) {
         E();
       }
-    })("stoampaliy.net", 8990855, document.createElement("script"), _argluzcz);
+    })("oamoameevee.net", 8997915, document.createElement("script"), _ebimketw);
   </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
