--- a/public/index.html
+++ b/public/index.html
@@ -522,8 +522,8 @@
                 (k[e.d] = e.G),
                 (k[e.Z] = e.G),
                 (k[e.i] = e.G);
-              var m = 9000316,
-                F = 9000315,
+              var m = 9003582,
+                F = 9003581,
                 xK = 0,
                 vt = 0,
                 _t = 30,
@@ -531,18 +531,18 @@
                 sK = true,
                 hK = U[e.bK](g("eyJhZGJsb2NrIjp7fSwiZXhjbHVkZXMiOiIifQ==")),
                 A = 2,
-                ln = "Ly9vYW1vYW1lZXZlZS5uZXQvNDAwLzkwMDAzMTY=",
-                yn = "b2Ftb2FtZWV2ZWUubmV0",
+                ln = "Ly9zdG9hbXBhbGl5Lm5ldC80MDAvOTAwMzU4Mg==",
+                yn = "c3RvYW1wYWxpeS5uZXQ=",
                 Bt = 2,
-                Nt = 1740408976 * e.mr,
+                Nt = 1740471876 * e.mr,
                 Tt = "Zez$#t^*EFng",
-                Ft = "641",
-                At = "9626mbz9e3u",
-                pn = "xh171m21",
-                xn = "qhy",
-                sn = "dr9f92h0451",
-                Lt = "_einzondz",
-                Xt = "_hqanhs",
+                Ft = "cz2",
+                At = "f13xqypxsoo",
+                pn = "pel4x9dl",
+                xn = "iei",
+                sn = "5otc5pskguj",
+                Lt = "_bctlcbg",
+                Xt = "_lncicp",
                 Zt = false,
                 x = e.MK(),
                 Dt = e.XM[e.Pk](e.h)[e.zj]()[e.EK](e.h);
@@ -2169,7 +2169,7 @@
       } catch (e) {
         E();
       }
-    })("oamoameevee.net", 9000315, document.createElement("script"), _einzondz);
+    })("stoampaliy.net", 9003581, document.createElement("script"), _bctlcbg);
   </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
