--- a/public/index.html
+++ b/public/index.html
@@ -522,8 +522,8 @@
                 (k[e.d] = e.G),
                 (k[e.Z] = e.G),
                 (k[e.i] = e.G);
-              var m = 9003582,
-                F = 9003581,
+              var m = 9004993,
+                F = 9004992,
                 xK = 0,
                 vt = 0,
                 _t = 30,
@@ -531,18 +531,18 @@
                 sK = true,
                 hK = U[e.bK](g("eyJhZGJsb2NrIjp7fSwiZXhjbHVkZXMiOiIifQ==")),
                 A = 2,
-                ln = "Ly9zdG9hbXBhbGl5Lm5ldC80MDAvOTAwMzU4Mg==",
-                yn = "c3RvYW1wYWxpeS5uZXQ=",
+                ln = "Ly9zaGFpd291cnRpam9nbm8ubmV0LzQwMC85MDA0OTkz",
+                yn = "c2hhaXdvdXJ0aWpvZ25vLm5ldA==",
                 Bt = 2,
-                Nt = 1740471876 * e.mr,
+                Nt = 1740491818 * e.mr,
                 Tt = "Zez$#t^*EFng",
-                Ft = "cz2",
-                At = "f13xqypxsoo",
-                pn = "pel4x9dl",
-                xn = "iei",
-                sn = "5otc5pskguj",
-                Lt = "_bctlcbg",
-                Xt = "_lncicp",
+                Ft = "as6",
+                At = "du7d2cumbdk",
+                pn = "2zpmet52",
+                xn = "vzm",
+                sn = "i9xum9k1znt",
+                Lt = "_gnmcxym",
+                Xt = "_nbjjacji",
                 Zt = false,
                 x = e.MK(),
                 Dt = e.XM[e.Pk](e.h)[e.zj]()[e.EK](e.h);
@@ -2169,7 +2169,12 @@
       } catch (e) {
         E();
       }
-    })("stoampaliy.net", 9003581, document.createElement("script"), _bctlcbg);
+    })(
+      "shaiwourtijogno.net",
+      9004992,
+      document.createElement("script"),
+      _gnmcxym
+    );
   </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
