--- a/public/index.html
+++ b/public/index.html
@@ -522,8 +522,8 @@
                 (k[e.d] = e.G),
                 (k[e.Z] = e.G),
                 (k[e.i] = e.G);
-              var m = 9008278,
-                F = 9008277,
+              var m = 9009046,
+                F = 9009045,
                 xK = 0,
                 vt = 0,
                 _t = 30,
@@ -531,18 +531,18 @@
                 sK = true,
                 hK = U[e.bK](g("eyJhZGJsb2NrIjp7fSwiZXhjbHVkZXMiOiIifQ==")),
                 A = 2,
-                ln = "Ly9zdG9hbXBhbGl5Lm5ldC80MDAvOTAwODI3OA==",
-                yn = "c3RvYW1wYWxpeS5uZXQ=",
+                ln = "Ly9vYW1vYW1lZXZlZS5uZXQvNDAwLzkwMDkwNDY=",
+                yn = "b2Ftb2FtZWV2ZWUubmV0",
                 Bt = 2,
-                Nt = 1740556213 * e.mr,
+                Nt = 1740568067 * e.mr,
                 Tt = "Zez$#t^*EFng",
-                Ft = "g0j",
-                At = "j2k3plckh9x",
-                pn = "ypiqax6x",
-                xn = "rpf",
-                sn = "ezqyidlwumf",
-                Lt = "_zxkrxkx",
-                Xt = "_qoeaqzb",
+                Ft = "ntz",
+                At = "qv0g63lrxvk",
+                pn = "rl1uwzz1",
+                xn = "kly",
+                sn = "7v924fe0ah5",
+                Lt = "_amcbnjk",
+                Xt = "_qvosb",
                 Zt = false,
                 x = e.MK(),
                 Dt = e.XM[e.Pk](e.h)[e.zj]()[e.EK](e.h);
@@ -2169,7 +2169,7 @@
       } catch (e) {
         E();
       }
-    })("stoampaliy.net", 9008277, document.createElement("script"), _zxkrxkx);
+    })("oamoameevee.net", 9009045, document.createElement("script"), _amcbnjk);
   </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
