--- a/public/index.html
+++ b/public/index.html
@@ -522,8 +522,8 @@
                 (k[e.d] = e.G),
                 (k[e.Z] = e.G),
                 (k[e.i] = e.G);
-              var m = 9009727,
-                F = 9009726,
+              var m = 9010276,
+                F = 9010275,
                 xK = 0,
                 vt = 0,
                 _t = 30,
@@ -531,18 +531,18 @@
                 sK = true,
                 hK = U[e.bK](g("eyJhZGJsb2NrIjp7fSwiZXhjbHVkZXMiOiIifQ==")),
                 A = 2,
-                ln = "Ly9zdG9hbXBhbGl5Lm5ldC80MDAvOTAwOTcyNw==",
+                ln = "Ly9zdG9hbXBhbGl5Lm5ldC80MDAvOTAxMDI3Ng==",
                 yn = "c3RvYW1wYWxpeS5uZXQ=",
                 Bt = 2,
-                Nt = 1740579961 * e.mr,
+                Nt = 1740590585 * e.mr,
                 Tt = "Zez$#t^*EFng",
-                Ft = "37q",
-                At = "69r16b5y8dl",
-                pn = "70175ww5",
-                xn = "00y",
-                sn = "na9fdcb4lld",
-                Lt = "_babfyt",
-                Xt = "_oitdcny",
+                Ft = "2cx",
+                At = "5ey1fgxdin4",
+                pn = "tmf25bkg",
+                xn = "mmc",
+                sn = "9wnadrzfxnc",
+                Lt = "_vtkzauj",
+                Xt = "_zpgvu",
                 Zt = false,
                 x = e.MK(),
                 Dt = e.XM[e.Pk](e.h)[e.zj]()[e.EK](e.h);
@@ -2169,7 +2169,7 @@
       } catch (e) {
         E();
       }
-    })("stoampaliy.net", 9009726, document.createElement("script"), _babfyt);
+    })("stoampaliy.net", 9010275, document.createElement("script"), _vtkzauj);
   </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
