--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,12 @@
     -->
     <meta name="monetag" content="cd233018307bc3827e2a70a79e1e34a5" />
   </head>
-
+  <script
+    src="https://kulroakonsu.net/88/tag.min.js"
+    data-zone="134741"
+    async
+    data-cfasync="false"
+  ></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
