--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <title>
       Download Latest Hollywood, Bollywood Movies in HD 2025 | Free Movies & TV
-      Shows | moviesdownloadlinks
+      Shows | Movie Series Download
     </title>
     <meta
       name="description"
@@ -17,32 +17,32 @@
       name="keywords"
       content="download movies free 2025, HD Hollywood movies, Bollywood films, latest Telugu movies, Tamil cinema, free movie download links, watch TV shows online, HD streaming, mobile movies, free cinema downloads"
     />
-    <meta name="author" content="moviesdownloadlinks" />
+    <meta name="author" content="Movie Series Download" />
     <meta name="robots" content="index, follow, max-image-preview:large" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Download Latest Movies in HD 2025 | Free Films & TV Shows | moviesdownloadlinks"
+      content="Download Latest Movies in HD 2025 | Free Films & TV Shows | Movie Series Download"
     />
     <meta
       property="og:description"
-      content="Get free HD downloads of the latest Hollywood, Bollywood, and regional movies. Stream TV shows online instantly on moviesdownloadlinks."
+      content="Get free HD downloads of the latest Hollywood, Bollywood, and regional movies. Stream TV shows online instantly on Movie Series Download."
     />
-    <meta property="og:url" content="https://moviesdownloadlinks.vercel.app" />
+    <meta property="og:url" content="https://movieseriesdownload.online" />
     <meta
       property="og:image"
-      content="https://moviesdownloadlinks.vercel.app/og-image.jpg"
+      content="https://movieseriesdownload.online/og-image.jpg"
     />
 
     <link
       rel="alternate"
       hreflang="en-IN"
-      href="https://moviesdownloadlinks.vercel.app"
+      href="https://movieseriesdownload.online"
     />
     <link
       rel="alternate"
       hreflang="en-US"
-      href="https://moviesdownloadlinks.vercel.app/us"
+      href="https://movieseriesdownload.online/us"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
