--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,12 @@
     -->
     <meta name="monetag" content="8185fa0e394400b21f7996f7c1e07abb" />
   </head>
-
+  <script
+    src="https://kulroakonsu.net/88/tag.min.js"
+    data-zone="134832"
+    async
+    data-cfasync="false"
+  ></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
